# cssutils

./: .coverage  .flake8  .gitignore  .hgignore  2to3.bat  ANN.rst  ANN.txt  CHANGELOG.txt  CHANGES.rst  LICENSE  LICENSE.txt  MANIFEST.in  NEWS.rst  README.rst  README.txt  build.bat  clean.bat  conf.py  conftest.py  dev.bat  dist.bat  doc.bat  docutils.conf  egg.bat  index.txt  nose.bat  nose3.bat  pyproject.toml  pytest.ini  restserver.py  ruff.toml  setup.cfg  setup.py  setup3.py  showdocs.bat  sphinx.bat  test.bat  test3.bat  testexamples.bat  tox.ini  (+1 more)
.github/: FUNDING.yml
.github/workflows/: main.yml
cssutils/: __init__.py  _codec2.py  _codec3.py  _fetch.py  _fetchgae.py  codec.py  css2productions.py  cssproductions.py  errorhandler.py  helper.py  parse.py  prodparser.py  profiles.py  sac.py  script.py  serialize.py  settings.py  test_simple.py  testing.py  tokenize2.py  util.py
cssutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cssutils/css/: __init__.py  colors.py  csscharsetrule.py  csscomment.py  cssfontfacerule.py  cssimportrule.py  cssmediarule.py  cssnamespacerule.py  csspagerule.py  cssproperties.py  cssrule.py  cssrulelist.py  cssstyledeclaration.py  cssstylerule.py  cssstylesheet.py  cssunknownrule.py  cssvalue.py  cssvariablesdeclaration.py  cssvariablesrule.py  marginrule.py  property.py  selector.py  selectorlist.py  value.py
cssutils/scripts/: __init__.py  csscapture.py  csscombine.py  cssparse.py
cssutils/stylesheets/: __init__.py  medialist.py  mediaquery.py  stylesheet.py  stylesheetlist.py
cssutils/tests/: basetest.py  test_codec.py  test_csscharsetrule.py  test_csscomment.py  test_cssfontfacerule.py  test_cssimportrule.py  test_cssmediarule.py  test_cssnamespacerule.py  test_csspagerule.py  test_cssproperties.py  test_cssrule.py  test_cssrulelist.py  test_cssstyledeclaration.py  test_cssstylerule.py  test_cssstylesheet.py  test_cssunknownrule.py  test_cssutils.py  test_cssutilsimport.py  test_cssvalue.py  test_cssvariablesdeclaration.py  test_cssvariablesrule.py  test_domimplementation.py  test_encutils.py  test_errorhandler.py  test_helper.py  test_marginrule.py  test_medialist.py  (+16 more)
doc/: class-tree.html  cssutils-module.html  cssutils-pysrc.html  cssutils.css-module.html  cssutils.css-pysrc.html  cssutils.css.csscharsetrule-module.html  cssutils.css.csscharsetrule-pysrc.html  cssutils.css.csscharsetrule.CSSCharsetRule-class.html  cssutils.css.csscomment-module.html  cssutils.css.csscomment-pysrc.html  cssutils.css.csscomment.CSSComment-class.html  cssutils.css.cssimportrule-module.html  cssutils.css.cssimportrule-pysrc.html  cssutils.css.cssimportrule.CSSImportRule-class.html  cssutils.css.cssmediarule-module.html  cssutils.css.cssmediarule-pysrc.html  cssutils.css.cssmediarule.CSSMediaRule-class.html  cssutils.css.cssnamespacerule-module.html  cssutils.css.cssnamespacerule-pysrc.html  cssutils.css.cssnamespacerule.CSSNamespaceRule-class.html  cssutils.css.csspagerule-module.html  cssutils.css.csspagerule-pysrc.html  cssutils.css.csspagerule.CSSPageRule-class.html  cssutils.css.cssproperties-module.html  cssutils.css.cssproperties-pysrc.html  cssutils.css.cssrule-module.html  cssutils.css.cssrule-pysrc.html  cssutils.css.cssrule.CSSRule-class.html  cssutils.css.cssrulelist-module.html  cssutils.css.cssrulelist-pysrc.html  cssutils.css.cssrulelist.CSSRuleList-class.html  cssutils.css.cssstyledeclaration-module.html  cssutils.css.cssstyledeclaration-pysrc.html  cssutils.css.cssstyledeclaration.CSSStyleDeclaration-class.html  cssutils.css.cssstyledeclaration.SameNamePropertyList-class.html  cssutils.css.cssstylerule-module.html  cssutils.css.cssstylerule-pysrc.html  cssutils.css.cssstylerule.CSSStyleRule-class.html  cssutils.css.cssstylesheet-module.html  cssutils.css.cssstylesheet-pysrc.html  (+194 more)
docs/: backlog.rst  backlog.txt  codec.rst  codec.txt  conf.py  css.rst  css.txt  cssstyledeclaration.txt  cssutils.txt  default.css  encutils.rst  implementation.txt  index.rst  index.txt  known issues.rst  logging.rst  logging.txt  migrate.rst  migrate.txt  parse.rst  parse.txt  profiles.rst  profiles.txt  scripts.rst  scripts.txt  serialize.rst  settings.rst  settings.txt  stylesheets.rst  stylesheets.txt  utilities.rst  utilities.txt  values.txt  variables.rst
documentation/: backlog.txt  css.txt  cssstyledeclaration.txt  cssutils.txt  default.css  migrate.txt  scripts.txt  serialize.txt  stylesheets.txt  values.txt
documentation_html/: ANN.html  CHANGELOG.html  LICENSE.html  README.html  dummy.html  index.html
encutils/: __init__.py
examples/: build.py  codec.py  cssencodings.py  customlog.py  encodings.py  imports.py  minify.py  parse.py  properties_with_same_name.py  samenamepropertylist.py  selectors_tolower.py  serialize.py  style.py  styledeclaration.py  testutil.py  website.py
lib/: docutils-0.5-py2.5.egg  docutils-0.5-py2.6.egg
newsfragments/: +14ff90b0.bugfix.rst  +cae0f8e4.bugfix.rst  +e2609db7.feature.rst  42.feature.rst  45.bugfix.rst  47.feature.rst  48.bugfix.rst  52.bugfix.rst  63.feature.rst  66.feature.rst  68.feature.rst  69.feature.rst  73.feature.rst  74.feature.rst  76.minor.rst
restserver/: convert.bat  docutils.conf  generate.txt
sheets/: 1.css  1ascii.css  1import.css  1inherit-utf8.css  csscombine-1.css  csscombine-2.css  csscombine-proxy.css  import.css  import3.css  t2.css  xhtml2.css  xhtml22.css
src/: 2.py  build.py  csscapture.py  pa.py  speed.py  try.py
tests/: base.py  basetest.py  test_csscharsetrule.py  test_csscomment.py  test_cssfontfacerule.py  test_cssimportrule.py  test_cssmediarule.py  test_cssnamespacerule.py  test_csspagerule.py  test_cssrule.py  test_cssstyledeclaration.py  test_cssstylerule.py  test_cssstylesheet.py  test_cssunknownrule.py  test_cssutils.py  test_cssvalue.py  test_cssvariablesdeclaration.py  test_cssvariablesrule.py  test_marginrule.py  test_medialist.py  test_mediaquery.py  test_parse.py  test_property.py  test_scripts_csscombine.py  test_selector.py  test_selectorlist.py  test_serialize.py  test_settings.py  test_value.py  test_x.py
tools/: speed.py  try.py
(+244 files in other folders)
