[build-system]
requires = [
	"setuptools>=77",
	"setuptools_scm[toml]>=3.4.1",
	# jaraco/skeleton#174
	"coherent.licensed",
]
build-backend = "setuptools.build_meta"

[project]
name = "cssutils"
authors = [
	{ name = "Christof Hoeke", email = "c@cthedot.de" },
]
maintainers = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "A CSS Cascading Style Sheets library for Python"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Internet",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"
dependencies = [
	"more_itertools",
	"encutils",
]
dynamic = ["version"]
keywords = ["CSS", "Cascading Style Sheets", "CSSParser", "DOM Level 2 Stylesheets", "DOM Level 2 CSS"]

[project.urls]
Source = "https://github.com/jaraco/cssutils"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 7, != 8.1.*",

	# local
	'lxml; python_version < "3.11"', # workaround for #25
	"cssselect",
	'importlib_resources; python_version < "3.9"',
	"jaraco.test >= 5.1",
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# tidelift
	"jaraco.tidelift >= 1.4",

	# local
]

check = [
	"pytest-checkdocs >= 2.14",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",
]

cover = [
	"pytest-cov",
]

enabler = [
	"pytest-enabler >= 3.4",
]

type = [
	# upstream
	
    # Exclude PyPy from type checks (python/mypy#20454 jaraco/skeleton#187)
	"pytest-mypy >= 1.0.1; platform_python_implementation != 'PyPy'",

	# local
]


[project.scripts]
csscapture = "cssutils.scripts.csscapture:main"
csscombine = "cssutils.scripts.csscombine:main"
cssparse = "cssutils.scripts.cssparse:main"


[tool.setuptools_scm]


[tool.pytest-enabler.mypy]
# Disabled due to jaraco/skeleton#143
# Also disabled for cssutils
