[metadata]
license_files =
	COPYING
	COPYING.LESSER
name = cssutils
author = Christof Hoeke
author_email = c@cthedot.de
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = A CSS Cascading Style Sheets library for Python
long_description = file:README.rst
url = https://github.com/jaraco/cssutils
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML
keywords = CSS, Cascading Style Sheets, CSSParser, DOM Level 2 Stylesheets, DOM Level 2 CSS

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.6
install_requires =
	importlib_metadata; python_version < "3.8"
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*
	examples*
	sheets*
	tools*

[options.extras_require]
testing =
	# upstream
	pytest >= 4.6
	pytest-checkdocs >= 2.4
	pytest-flake8
	# python_implementation: workaround for jaraco/skeleton#22
	# python_version: workaround for python/typed_ast#156
	pytest-black >= 0.3.7; python_implementation != "PyPy" and python_version < "3.10"
	pytest-cov
	# python_implementation: workaround for jaraco/skeleton#22
	# python_version: workaround for python/typed_ast#156
	pytest-mypy; python_implementation != "PyPy" and python_version < "3.10"
	pytest-enabler >= 1.0.1

	# local
	mock

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	csscapture = cssutils.scripts.csscapture:main
	csscombine = cssutils.scripts.csscombine:main
	cssparse = cssutils.scripts.cssparse:main
