[metadata]
name = cssutils
author = Christof Hoeke
author_email = c@cthedot.de
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = A CSS Cascading Style Sheets library for Python
long_description = file:README.rst
url = https://github.com/jaraco/cssutils
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML
keywords = CSS, Cascading Style Sheets, CSSParser, DOM Level 2 Stylesheets, DOM Level 2 CSS

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
	importlib_metadata; python_version < "3.8"

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*
	examples*
	sheets*
	tools*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff

	# local
	lxml; \
		# workaround for #25
		python_version < "3.11"
	cssselect
	importlib_resources; python_version < "3.9"
	jaraco.test >= 5.1

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
console_scripts =
	csscapture = cssutils.scripts.csscapture:main
	csscombine = cssutils.scripts.csscombine:main
	cssparse = cssutils.scripts.cssparse:main
